fixed issue whereby floating legends was causing layout issues

--- a/app/assets/styles/partials/components/_buttons.scss
+++ b/app/assets/styles/partials/components/_buttons.scss
@@ -72,6 +72,7 @@
   cursor: pointer;
   font-size: inherit;
   text-decoration: underline;
+  width: auto;
   &:hover {
     text-decoration: underline;
     color: $color-links-hover;
