--- a/app/assets/styles/partials/components/_question.scss
+++ b/app/assets/styles/partials/components/_question.scss
@@ -23,7 +23,7 @@
 
 .question__legend {
   margin-bottom: 1rem;
-  float: left;
+  float: none;
 }
 
 .question__title {
